--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "sasjs-builder",
+  "name": "@sasjs/builder",
   "version": "0.1.0",
   "homepage": ".",
   "private": true,
   "dependencies": {
     "@handsontable/react": "^3.1.3",
+    "@sasjs/adapter": "^1.0.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -19,7 +20,6 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-semantic-toasts": "^0.6.5",
-    "sasjs": "^2.2.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
   },
@@ -47,6 +47,6 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.14.1"
   }
 }
